--- a/www/404.html
+++ b/www/404.html
@@ -3,19 +3,19 @@
 <head>
 
 <style type="text/css">
-* { margin:0px; padding:0px; }
+* { margin: 0px; padding: 0px; }
 div#nope {
-        background-image:url("http://media.giphy.com/media/CjXsDkRRCxof6/giphy.gif");
+        background: url(http://media.giphy.com/media/CjXsDkRRCxof6/giphy.gif) no-repeat center center fixed;
         width:100%;
         height:100%;
-        background-repeat:no-repeat;
-        background-attachment:fixed;
-        background-position:center;
         background-size:cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
         font-size:120px;
         font-weight:bold;
         text-align:left;
-        padding:0 0 0 50px;
+        text-indent: 50px;
         font-family: Georgia, "Georgia", serif;
         color: #fff;
 }
